Docker/Kubernet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: mydockerhubusername/wisecow:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "0.5"  # Limit the CPU usage to 0.5 cores
            memory: "512Mi"  # Limit the memory usage to 512 megabytes
